# tugboat

./: .gitignore  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  EXAMPLES.md  README.md  SECURITY.md  SKILL.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  v1_roadmap_item.yml
.github/workflows/: ci.yml  pages.yml
docs/: apply-rollback.md  architecture.md  auto-apply.md  cli-reference.md  compatibility-policy.md  daemon-guide.md  instruction-best-practices.md  integrations.md  llmff-compatibility.md  mcp-guide.md  migration-v1.md  policy-examples.md  quickstart.md  threat-model.md  troubleshooting.md
docs/announcements/: tugboat-mvp-announcement.md  tugboat-production-release-article.md  tugboat-x-announcement.md
docs/ci/: ci-guide.md  github-actions-template.yml
docs/ops/: artifact-retention-redaction.md  operating-runbook.md  quick-adoption-proposal-only.md  release-checklist.md  security-review-2026-05-26.md  security-review-production-candidate.md  security-review.md  sidecar-backup-restore.md
docs/releases/: 0.1.0.md  1.0.0-draft.md  production-candidate.md
docs/roadmaps/: 2026-05-25-production-roadmap.md  2026-05-27-next-roadmap-proposals.md  v1.0.0-roadmap.md
site/: README.md  index.html  render_docs.py  styles.css
site/docs/: 1.0.0-draft.html  README.html  apply-rollback.html  architecture.html  (+18 more)
tests/: test_artifacts.py  test_auto_apply_policy.py  test_cli_apply_rollback.py  test_cli_audit_scoring.py  test_cli_ci.py  test_cli_doctor.py  test_cli_eval_suite_all.py  test_cli_harness.py  test_cli_help.py  test_cli_index.py  test_cli_init.py  test_cli_llmff_pipeline.py  test_cli_malicious_trace_fixtures.py  test_cli_module.py  test_cli_ops_backup.py  test_cli_ops_migrations.py  test_cli_ops_observability.py  test_cli_ops_release_manifest.py  test_cli_status.py  test_cli_trace_adapters.py  test_config.py  test_daemon_queue.py  test_daemon_runner.py  test_daemon_service.py  test_db.py  test_decision_trace.py  test_docs_ops.py  test_e2e_proposal_loop.py  test_eval_suites.py  test_evals_structural.py  test_harness_legibility.py  test_indexer.py  test_llmff_external_cli_contract.py  test_llmff_fixture_backend.py  test_llmff_inspect_artifacts.py  test_llmff_run_supervisor.py  test_manifest_registry.py  test_markdown_parser.py  test_mcp_contract.py  test_ops_backup.py  (+21 more)
(+98 files in other folders)
