[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tugboat"
version = "0.1.0"
description = "Local-first agent instruction observability and optimization sidecar"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tugboat = "tugboat.cli:console_main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
