[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tugboat"
version = "0.1.0"
description = "Local-first agent instruction observability and optimization sidecar"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
tugboat = "tugboat.cli:console_main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/tugboat"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tugboat.manifests" = ["templates/*.yaml"]
