[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tugboat"
version = "1.0.0"
description = "Local-first agent instruction observability and optimization sidecar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.urls]
Homepage = "https://github.com/syndicalt/tugboat"
Documentation = "https://github.com/syndicalt/tugboat/tree/main/docs"
Source = "https://github.com/syndicalt/tugboat"
Issues = "https://github.com/syndicalt/tugboat/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "pytest-cov>=5.0", "twine>=5.0"]

[project.scripts]
tugboat = "tugboat.cli:console_main"
tugboat-fixture-llmff = "tugboat.llmff.fixture_backend:console_main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/tugboat"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tugboat.manifests" = ["templates/*.yaml"]
